System Biblioteczny - CHANGELOG

1.4 Stable
- Przeniesienie ustawień skryptu do osobnego pliku (includes/config.php)

1.3 Stable
- Poprawienie okładek - getimagesize() zwraca IMAGETYPE_XXX, a nie IMG_XXX
- Zmiana add_search.php w związku z nowym sposobem wywoływania
  metod klasy ibd (przeładowanie __call)
- Naprawienie pokazywania trafności przy wyszukiwaniu pełnotekstowym
- Dodanie wyświetlania ISBN-10 oraz ISSN-8 dla pojedynczych woluminów
- Zalążek interfejsu do synchronizacji danych (sync.php)
- Zalążek system inwentaryzacji (zobacz katalog inwentaryzacja)
- Dodanie wywołania metody db2::escape_data() przy niestandardowym
  zapytaniu w funkcji ksiazki::cache_update()

1.2 Stable
- Dodanie wywołania metody db2::escape_data() przy niestandardowym
  zapytaniu w funkcji ksiazki::szukaj_info()
- Przebudowa systemu okładek (Bug #2)

1.1 Stable
- Modułowy system pobierania informacji ze źródeł zewnętrznych
- Poprawka wyszukiwania po miejscu wraz z podaną półką/rzędem
- Możliwość usuwania własnych okładek

1.03 Stable
- Poprawienie wyszukiwania po ISSN
- Dodanie wyglądu wydruku w CSS
- Poprawienie drobnych błędów w kodzie HTML
- Skrypt sprawdzający spełnienie wymagań systemu - test.php
- Poprawienie skryptów JavaScript, ktore wymagały, by system znajdował się
  w głównej scieżce serwera/vHosta (/)

1.02 Stable
- Możliwość dodawania własnych okładek (także do książek bez ISBN) oraz
  podmieniania nimi obrazków pobranych z LibraryThing.

1.01 Stable
- Zmniejszono częstotliwość odświeżania informacji o nieistniejących
  miniaturach.
- Poprawienie nazwy pola (`od2` na `od`) w odpowiedzi z bazy danych już przy
  cache'owaniu danych.

1.0 Stable
- Poprawiono informowanie o stanie książki po więcej niż jednym wypożyczeniu
- Dodano pobieranie okładek książek

1.0 RC
- Dodano możliwość zmiany nazwy półki/regału.
- Prosta historia wypożyczeń.
- Poprawiono błąd w formularzu wyszukiwania książek
  (po pożyczeniu/oddaniu woluminów).